--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -412,14 +412,20 @@ margin: auto;
 }
 
 input[type="submit"]{
-	font-family: 'Syne';
-	font-weight: 700;
-	color: white;
-	background-color: #1D6154;
-	margin : 2em auto ;
-	width: 180px;
-	text-align: center;
-	border-radius: 60px ;
+    top: 20px;
+    font-family: 'Syne';
+    font-weight: 700;
+    color: white;
+    background-color: #1D6154;
+    margin: 2em auto;
+    width: 237px;
+    text-align: center;
+    height: 36px;
+    border-radius: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 
@@ -536,61 +542,58 @@ a.mdp-forget {
 	justify-content: center;
 }
 
-/*modal-gallery*/
 
+/* Style pour le modal */
 .modal-container {
-    position: relative;
+    position: fixed; /* Utilisez "fixed" pour un positionnement correct */
     background: white;
-    max-width: 460px;
-    height: 610px;
-    margin: auto;
-    flex: 1;
-    padding: 50px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    height: 688px;
+    width: 630px;
+    overflow-y: auto; /* Ajoutez un défilement si nécessaire */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-/* Styles de base pour le modal */
-
-
-/* Styles pour le modal visible */
-/* Styles de base pour le modal */
 .modal {
-    background-color: rgba(0, 0, 0, 0.75);
-    position: relative;
-    margin: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed; /* Utilisez "fixed" pour l'arrière-plan obscurci */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
-.modal.invisible {
+.invisible {
     display: none;
-  }
-    /*background-color: rgba(0, 0, 0, 0.75);
-    position: fixed;*/
-    /*inset: 0;*/
-    /*z-index: 1000;
-    display: flex;*/
-    /*visibility: hidden;*/
-    /*margin: auto;
-    transition: visibility 0.3s;
-}*/
-
-/* Styles pour le modal visible */
-/*.modal-visible {
-    visibility: visible;
-    display: block;
-}*/
-
-
-
-
-.modal-visible {
-    visibility: visible;
 }
 
-.modal-close {
-    position: absolute;
-    top: 30px;
-    right: 30px;
+
+.fa-solid.fa-xmark {
+    position: fixed;
+    left: 630px;
+    top: 28px;
+}
+
+
+
+.modal-photo {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    border-bottom: 1px solid #B3B3B3;
+    padding: 10px 5px 40px;
+}
+
+.modal-photo img {
+    width: 79px;
+    height: 105px;
     cursor: pointer;
-    font-family: "FontAwesome";
+    padding: 10px;
 }
 
 .modal-title {
@@ -599,22 +602,6 @@ a.mdp-forget {
     font-size: 26px;
     padding-bottom: 35px;
     font-weight: 400;
-}
-
-.modal-photo {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    border-bottom: 1px solid #B3B3B3;
-    padding-bottom: 40px;
-    padding-top: 10px;
-    padding-left: 5px;
-}
-
-.modal-photo img {
-    width: 79px;
-    height: 105px;
-    cursor: pointer;
 }
 
 i.fa-regular.fa-trash-can {
@@ -647,4 +634,9 @@ i.fa-regular.fa-trash-can {
     height: 36px;
     font-size: 14px;
     cursor: pointer;
+}
+
+#openModalIcon.far.fa-pen-to-square {
+    position: relative;
+    left: 10px;
 }
