--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -586,7 +586,7 @@ a.mdp-forget {
     flex-wrap: wrap;
     gap: 15px;
     border-bottom: 1px solid #B3B3B3;
-    padding: 10px 5px 40px;
+    padding: 46px 35px;
 }
 
 .modal-photo img {
@@ -602,6 +602,8 @@ a.mdp-forget {
     font-size: 26px;
     padding-bottom: 35px;
     font-weight: 400;
+    position: relative;
+    top: 37px;
 }
 
 i.fa-regular.fa-trash-can {
